[gd_scene load_steps=2 format=3 uid="uid://dgrul6e33kwel"]

[ext_resource type="Script" path="res://scenes/fault_manager/fault_manager.gd" id="1_dsipj"]

[node name="FaultManager" type="Node"]
script = ExtResource("1_dsipj")

[node name="FaultTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="FaultCheckTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FaultTimer" to="." method="_on_fault_timeout"]
[connection signal="timeout" from="FaultCheckTimer" to="." method="_on_fault_check_timer_timeout"]
